writen test cases for HelpDocuments service